src/test/deca/syntax/valid/without_class/while.deca
// Description :
//    test de la syntaxe if then else
//
// Resultats :
//    ok
//
// Historique:
//    cree le 08/01/2023
{
    int a = 8;
    while (a != 0) {
        a = a - 1;
    }
}