src/test/deca/syntax/invalid/without_class/weird_assign.deca
/// Description:
// 	  Syntax for a suit of assigns
// 	
// Resultats:
// 	  Syntax error
//    line 12
// Historique:
// 	  cree le 19/01/2023

{
    int a = 0;
    a = -1 = 8 = -3 = 19;
    print(a);
}